Refactor GitHub API configuration

--- a/config.json
+++ b/config.json
@@ -4,29 +4,21 @@
   "debug": true,
 
 
-  "github_api": {
-    "runners": [
-      {
-        "name": "linux_runner",
-        "os": "linux",
-        "arch": "x64",
-        "self-hosted": true,
-        "count": 10
-      },
-      {
-        "name": "mac_runner",
-        "os": "macos",
-        "arch": "x64",
-        "self-hosted": true,
-        "count": 2
-      },
-      {
-        "name": "win_runner",
-        "os": "windows",
-        "arch": "x64",
-        "self-hosted": true,
-        "count": 5
-      }
-    ]
+  "github-api": {
+    "linux-runners": {
+      "arch": "x64",
+      "self-hosted": true,
+      "count": 10
+    },
+    "windows-runners": {
+      "arch": "x64",
+      "self-hosted": true,
+      "count": 5
+    },
+    "macos-runners": {
+      "arch": "x64",
+      "self-hosted": true,
+      "count": 5
+    }
   }
 }
